--- a/views/alliance.pug
+++ b/views/alliance.pug
@@ -1,9 +1,10 @@
 extends layout
-include alli_details.pug
+include details.pug
+include history.pug
 
 block content
   div.row.mt-5
-    div.col-4
-      +alli_details(details, details.alliance_id)
-    div.col-8
-      
+    div.col
+      +details(details, 'alliance', details.alliance_id)
+    div.col
+      +history('alliance', corporations, null, null)
