--- a/views/delta_list.pug
+++ b/views/delta_list.pug
@@ -14,9 +14,9 @@ mixin delta(title, contents, type, icon)
       thead.thead-light
         tr
           th.image
-          th.align-center.name 名称
-          th.align-center.number 角色数
-          th.align-center.number 波动
+          th.text-center.name 名称
+          th.text-center.number 角色数
+          th.text-center.number 波动
       tbody
         if contents != undefined
           each row in contents
@@ -25,5 +25,5 @@ mixin delta(title, contents, type, icon)
                 +image(type, row.id, 48, row.name)
               td.name
                 a(href='/' + type + '/' + row.id)= row.name
-              td.align-center.number= (row.member_count === null ? 0 : row.member_count)
-              td.align-center.number= (row.diff_7days === null ? 0 : row.diff_7days)
+              td.text-center.number= (row.member_count === null ? 0 : row.member_count)
+              td.text-center.number= (row.diff_7days === null ? 0 : row.diff_7days)
