--- a/views/kb_cell.pug
+++ b/views/kb_cell.pug
@@ -3,4 +3,4 @@ mixin kb(type, id)
   tr
       td.align-center(colspan=2)
         h5
-          a(href='https://beta.ceve-market.org/'+type+'/'+details.alliance_id+'/kill' target='_blank') KB链接
+          a(href='https://beta.ceve-market.org/'+type+'/'+id+'/kill' target='_blank') KB链接
