--- a/views/new_entity_list.pug
+++ b/views/new_entity_list.pug
@@ -18,4 +18,4 @@ mixin new(title, contents, type)
                 +image(type, row.id, 48, row.name)
               td.name
                 a(href='/' + type + '/' + row.id)= row.name
-              td.align-center.number= row.birthday
+              td.text-center.number= row.birthday
