--- a/views/layout.pug
+++ b/views/layout.pug
@@ -11,6 +11,8 @@ html
     link(rel='preconnect', href='https://fonts.loli.net')
     link(rel='preconnect' href='https://fonts.loli.net' crossrigin)
     link(rel='stylesheet' href='https://fonts.loli.net/css2?family=Noto+Sans+SC:wght@300;500&display=swap')
+    //- link(rel='stylesheet' href='https://cdn.datatables.net/1.12.1/css/jquery.dataTables.css')
+    link(rel='stylesheet' href='/DataTables/datatables.min.css')
 
     link(rel='stylesheet', href='/stylesheets/style.css')
 
@@ -37,4 +39,7 @@ html
     script(src='/javascripts/jquery-3.6.0.min.js')
     script(src='/javascripts/bootstrap/bootstrap.bundle.min.js')
     script(src='/javascripts/jquery.autocomplete.min.js')
+    script(src='/DataTables/datatables.min.js')
+    //- script(src='https://cdn.datatables.net/1.12.1/js/jquery.dataTables.js')
+
     script(src='/javascripts/script.js')
