--- a/views/layout.pug
+++ b/views/layout.pug
@@ -17,6 +17,8 @@ html
     link(rel='stylesheet', href='/stylesheets/style.css')
 
   body.dark
+    include toast.pug
+
     div.wrapper
       include navbar.pug
       
