--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -2,6 +2,8 @@ html {
   font-size: 16px;
   --join: rgb(93, 151, 36);
   --leave: chocolate;
+  --up: rgb(177, 52, 61);
+  --down: rgb(91, 148, 79);
 }
 
 body {
@@ -18,11 +20,12 @@ a {
   color: #00B7FF;
 }
 
+
+/* Navbar */
 nav {
   font-size: 1.5rem;
 }
 
-/* Navbar */
 .navbar-collapse form button {
   width: 100px;
 }
@@ -70,6 +73,14 @@ table tr > td.image {
 }
 .leave.hover {
   color: var(--leave) !important;
+}
+
+.up {
+  color: var(--up) !important;
+}
+
+.down {
+  color: var(--down) !important;
 }
 
 h2.title {
