refactor doc btn to dropdown menu

--- a/views/layout.pug
+++ b/views/layout.pug
@@ -39,6 +39,7 @@ html
             | 本网站的游戏内数据，所有权属于CCP Games和网易游戏
 
     script(src='/javascripts/jquery-3.6.0.min.js')
+    script(src='/javascripts/bootstrap/popper.min.js')
     script(src='/javascripts/bootstrap/bootstrap.bundle.min.js')
     script(src='/javascripts/jquery.autocomplete.min.js')
     script(src='/DataTables/datatables.min.js')
