--- a/views/navbar.pug
+++ b/views/navbar.pug
@@ -18,7 +18,7 @@ nav.navbar.navbar-expand-lg.navbar-dark.bg-dark.mb-3
       ul.navbar-nav.mb-2.mb-lg-0.col-2.ps-2
         li.nav-item
           .btn-group
-            a.btn.btn-lg.btn-secondary(type="button" href="/info") 文档
+            a.btn.btn-secondary(type="button" href="/info") 说明文档
             button.btn.btn-secondary.dropdown-toggle.dropdown-toggle.split(type="button" data-bs-toggle="dropdown" aria-expanded="false")
               span.visually-hidden Toggle Dropdown
             ul.dropdown-menu(aria-labelledby="dropdownMenuLink")
@@ -28,5 +28,5 @@ nav.navbar.navbar-expand-lg.navbar-dark.bg-dark.mb-3
                 a.dropdown-item(href="/info#delay") 数据延迟
       ul.navbar-nav.mb-2.mb-lg-0.col-2
         li.nav-item
-            a.btn.btn-lg.btn-success.donateBtn(type="button" href='/donate') 捐赠
+            a.btn.btn-success.donateBtn(type="button" href='/donate') 捐赠
       
