--- a/views/info.pug
+++ b/views/info.pug
@@ -12,9 +12,11 @@ block content
     |。
 
   h3#code 代码
-  p EVE户的代码基于EVEWho的
+  p EVE户的
+    a(href="https://github.com/mintnick/evehu" target="_blank") 代码
+    | 基于EVEWho的
     a(href="https://github.com/zKillboard/evewho" target="_blank") 开源代码
-    |，来自zKillboard的作者Squizz。
+    |修改，来自zKillboard的作者Squizz。
   p 主要的改动有
   ul
     li 外观重做
