add projects page. add missing ceos and creators

--- a/views/info.pug
+++ b/views/info.pug
@@ -16,8 +16,8 @@ block content
     a(href="https://github.com/mintnick/evehu" target="_blank") 代码
     | 基于EVEWho的
     a(href="https://github.com/zKillboard/evewho" target="_blank") 开源代码
-    |修改，来自zKillboard的作者Squizz。
-  p 主要的改动有
+    |修改，原作者是zKillboard的创建者Squizz。
+  p EVE户进行的改动主要有：
   ul
     li 外观重做
     li 增加了公司的雇佣记录
