--- a/views/submit.pug
+++ b/views/submit.pug
@@ -30,4 +30,4 @@ block content
           .row.mt-5
             h4(class=style)=message
               if link && link != ""
-                a(href=link, style="text-decoration: none;") 点击此处查看
+                a(href=link, style="text-decoration: none;") 点击查看
