--- a/views/toast.pug
+++ b/views/toast.pug
@@ -3,5 +3,5 @@
     .d-flex
       .toast-body.mx-auto 当前数据尚不完整，仅供参考，点
         a(href="/submit" style="text-decoration: none;") 这里
-        |补充数据
+        |帮助补充数据
       //- button.btn-close.me-2.m-auto(type="button" data-bs-dismiss="toast" aria-label="Close")
